# hw05_final

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
log/: handlers.py
mydict/: asgi.py  settings.py  urls.py  wsgi.py
posts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_group.py  0003_alter_post_group.py  0004_remove_post_group.py  0005_post_group.py  0006_alter_post_options_alter_group_slug_and_more.py  0007_alter_group_description_alter_group_title_and_more.py  0008_post_image.py  0009_comment.py  0010_follow.py  0011_post_title_alter_post_author_alter_post_group_and_more.py
posts/templates/: comments.html  follow.html  new_post.html  post.html  post_edit.html  post_item.html  profile.html  profile_info.html
templates/: base.html  footer.html  group.html  index.html  menu.html  nav.html
users/templates/: signup.html
users/templates/registration/: logged_out.html  password_change_done.html  password_change_form.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
